--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "4.17.13",
     "@types/node": "17.0.23",
     "nodemon": "2.0.15",
     "ts-node": "10.7.0",
@@ -20,6 +20,6 @@
     "typescript": "4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "4.17.3"
   }
 }
