--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "npx eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/node": "17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
     "nodemon": "2.0.15",
     "ts-node": "10.7.0",
     "tslib": "2.3.1",
