--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
     "@types/node": "17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "eslint": "^8.12.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint": "8.12.0",
     "nodemon": "2.0.15",
     "ts-node": "10.7.0",
     "tslib": "2.3.1",
     "typescript": "4.6.3"
   },
   "dependencies": {
+    "bcrypt": "5.0.1",
     "express": "4.17.3"
   }
 }
