--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "17.0.23",
     "@typescript-eslint/eslint-plugin": "5.17.0",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.0",
     "express": "4.17.3",
     "firebase-admin": "^10.0.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   }
 }
