--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
         "indent": ["error", "tab"],
         "key-spacing": ["error", { "afterColon": true }],
         "object-curly-spacing": ["error", "always"],
-        "switch-colon-spacing": ["error", {"after": true, "before": false}]
-
+        "switch-colon-spacing": ["error", {"after": true, "before": false}],
+        "@typescript-eslint/no-non-null-assertion": "off"
     }
   }
