--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
-    "@types/cors": "^2.8.12",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/morgan": "^1.9.3",
-    "@types/multer": "^1.4.7",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/morgan": "1.9.3",
+    "@types/multer": "1.4.7",
     "@types/node": "17.0.23",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
@@ -29,16 +29,18 @@
     "typescript": "4.6.3"
   },
   "dependencies": {
-    "@google-cloud/storage": "^6.1.0",
+    "@firebase/app": "0.7.26",
+    "@firebase/storage": "0.9.7",
+    "@google-cloud/storage": "6.1.0",
     "bcrypt": "5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "cors": "2.8.5",
+    "dotenv": "16.0.0",
     "express": "4.17.3",
-    "express-rate-limit": "^6.4.0",
-    "firebase-admin": "^10.0.2",
-    "helmet": "^5.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "express-rate-limit": "6.4.0",
+    "firebase-admin": "10.0.2",
+    "helmet": "5.1.0",
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.10.0",
+    "multer": "1.4.5-lts.1"
   }
 }
