--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/morgan": "1.9.3",
     "@types/multer": "1.4.7",
     "@types/node": "17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
     "eslint": "8.12.0",
@@ -43,6 +44,7 @@
     "helmet": "5.1.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "^6.7.5"
   }
 }
