--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
-    "@types/compression": "^1.7.2",
+    "@types/compression": "1.7.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "8.5.8",
     "@types/morgan": "1.9.3",
     "@types/multer": "1.4.7",
     "@types/node": "17.0.23",
-    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer": "6.4.4",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
     "eslint": "8.12.0",
@@ -43,8 +43,7 @@
     "firebase-admin": "10.0.2",
     "helmet": "5.1.0",
     "jsonwebtoken": "8.5.1",
-    "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "6.7.5"
   }
 }
